# Codex

./: .gitignore  Cargo.toml  README.md  README_EN.md
.github/workflows/: portable-build.yml  release-assets.yml
apps/codex-plus-launcher/: Cargo.toml
apps/codex-plus-launcher/src/: lib.rs  main.rs  portable_main.rs
apps/codex-plus-manager/: package.json
apps/codex-plus-manager/src/: App.tsx  i18n-en.ts  main.tsx  styles.css
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/codex-plus-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
assets/inject/upstream/dream-skin/macos/: renderer-inject.js
codex_session_delete/: launcher.py
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: launcher.rs  lib.rs  model_catalog.rs  portable.rs  portable_dialog.rs  settings.rs
crates/codex-plus-core/src/install/: mod.rs
crates/codex-plus-core/src/portable_dialog/: cocoa.rs  mod.rs  win32.rs
crates/codex-plus-core/tests/: cdp_bridge.rs  launcher.rs
crates/codex-plus-data/: Cargo.toml
crates/codex-plus-data/src/: lib.rs
docs/: portable-macos.md
scripts/installer/macos/: package-portable.sh
scripts/installer/windows/: package-portable.ps1
tests/: test_launcher_cli.py
